--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -255,6 +255,8 @@ prompt设计原则：
     + $$Q_{\pi}(s,a)$$：动作价值函数，在状态s下，采取动作a，获得的期望回报
     + $$V_{\pi}(s)$$：状态价值函数，在状态s下，采取所有可能动作获得的期望回报
 
+![](../assets/rl-V-Q.png)
+
 ## 贝尔曼方程
 
 用动态规划解决优化和决策问题。对于给定策略$$\pi$$，
