--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -274,3 +274,5 @@ p.s.回头看一下reinforce recall：[Off-policy Learning in Two-stage Recommen
 2. 当reward是multi-step的时候（例如从列表页点击视频，进入落地页后的时长叠加），等价于TD(1)的强化学习
 
 ![](../assets/reinforce-one-step-reward.png)
+
+## 时序差分方法
