--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -215,6 +215,7 @@ prompt设计原则：
 
 ## 一些概念
 
++ 回合(episode)：一次完整智能体和环境交互，从初始状态直到终止状态
 + 马尔可夫链(MC)：下一状态只和当前状态有关，和之前时刻的状态无关
 + 马尔可夫决策过程（MDP）：马尔可夫链的基础上引入动作和奖励，4元组$$(S,A,P,R)$$
 + 部分可观测马尔可夫决策过程（POMDP）：智能体无法观测到环境的完整状态，只能看到一部分，7元组$$(S,A,T,R,\Omega,O,\gamma)$$，$$\Omega$$是观测集，智能体能观测到的所有可能结果，$$\gamma$$是折扣因子，$$T$$是转移概率，当前状态和动作下，转移到下一状态的概率
@@ -266,13 +267,24 @@ prompt设计原则：
 + 最优状态价值函数的贝尔曼方程为$$V_*(s)=\max _a \sum_{s^{\prime}, r} p\left(s^{\prime}, r \mid s, a\right)\left[r+\gamma V_*\left(s^{\prime}\right)\right]$$
 + 最优动作价值函数的贝尔曼方程为$$Q_*(s, a)=\sum_{s^{\prime}, r} p\left(s^{\prime}, r \mid s, a\right)\left[r+\gamma \max _{a^{\prime}} Q_*\left(s^{\prime}, a^{\prime}\right)\right]$$
 
-## 蒙特卡洛方法
+## 蒙特卡洛方法（MC）
 
-p.s.回头看一下reinforce recall：[Off-policy Learning in Two-stage Recommender Systems](https://www.researchgate.net/publication/341128860_Off-policy_Learning_in_Two-stage_Recommender_Systems)
+多次试验，获得多个实际运行轨迹（需要运行到回合结束），根据它们来估计价值函数或者优化策略。实际应用时，可以在每运行完一个回合后立即更新状态价值，如下，$$\alpha$$是学习率，$$G_t$$是某个回合实验的回报
+
+$$
+V\left(s_t\right) \leftarrow V\left(s_t\right)+\alpha\left(G_t-V\left(s_t\right)\right)
+$$
+
+## 时序差分方法（TD）
+
+TD(Temporal Difference，TD)，基于当前的价值估计进行自举（bootstrapping）学习，通过自身的估计值(如$$V(s_{t+1})$$)来更新当前的估计值(如$$V(s_{t})$$)。与MC的差别在于，TD不需要等整个回合结束，而是每前进一小就更新一次
+
+
+## REINFORCE recall
+
+p.s.回头看一下REINFORCE recall：[Off-policy Learning in Two-stage Recommender Systems](https://www.researchgate.net/publication/341128860_Off-policy_Learning_in_Two-stage_Recommender_Systems)
 
 1. 当reward是one-step的时候，等价于监督学习下的policy gradient；
 2. 当reward是multi-step的时候（例如从列表页点击视频，进入落地页后的时长叠加），等价于TD(1)的强化学习
 
 ![](../assets/reinforce-one-step-reward.png)
-
-## 时序差分方法
