--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -279,6 +279,35 @@ $$
 
 TD(Temporal Difference，TD)，基于当前的价值估计进行自举（bootstrapping）学习，通过自身的估计值(如$$V(s_{t+1})$$)来更新当前的估计值(如$$V(s_{t})$$)。与MC的差别在于，TD不需要等整个回合结束，而是每前进一小就更新一次
 
+TD目标和TD误差
+
+$$
+V\left(s_t\right) \leftarrow V\left(s_t\right)+\alpha[\underbrace{\underbrace{r_{t+1}+\gamma V\left(s_{t+1}\right)}_{\text {TD 目标 }}-V\left(s_t\right)}_{\text {TD误差 }}]
+$$
+
+TD误差：$$\delta_t=V_{\text {TD目标 }}-V\left(s_t\right)=r_{t+1}+\gamma V\left(s_{t+1}\right)-V\left(s_t\right)$$
+
++ 单步TD：也叫TD(0)，智能体和环境每个时间步交互一次，仅依赖未来一步的奖励和下一个状态的价值估计$$V(s_{t+1})$$
++ 多步TD：智能体与环境交互n次，也可以在每个时间步更新，但依赖的是未来n步奖励和状态的价值估计$$V(s_{t+n})$$，如下：
+
+$$
+\begin{aligned}
+V\left(s_t\right) & \leftarrow V\left(s_t\right)+\alpha\left[G_t^{(n)}-V\left(s_t\right)\right] \\
+& =V\left(s_t\right)+\alpha[\underbrace{\left(r_{t+1}+\gamma r_{t+2}+\gamma^2 r_{t+3}+\cdots+\gamma^{n-1} r_{t+n}+\gamma^n V\left(s_{t+n}\right)\right)}_{n \text { 步的折扣回报+第 }(t+n) \text { 步的价值 } V\left(s_{t+n}\right)}-V\left(s_t\right)
+\end{aligned}
+$$
+
+$$TD(\lambda)$$如下：
+
+$$
+V\left(s_t\right) \leftarrow V\left(s_t\right)+\alpha\left[G_t^\lambda-V\left(s_t\right)\right]
+$$
+
+其中，$G_t^\lambda$$是在时间步$$t$$的$$\lambda$$回报，即综合考虑多个步数的回报，以$$\lambda$$为权重的加权和，计算公式如下：
+
+$$
+G_t^\lambda=\underbrace{(1-\lambda)_{n=1}^{T-t-1} \lambda^{n-1} G_{t: t+n}}_{\text {侧重于 } \mathrm{TD}}+\underbrace{\lambda^{T-t-1} G_t}_{\text {侧重于 } \mathrm{MC}}
+$$
 
 ## REINFORCE recall
 
