--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1958,15 +1958,40 @@ sid每级code book的每个code搞一个special token(代码应该是```tokenize
 
 ### Hybrid Item Tokenization
 
-
++ 把llm产出的emb用RQ-VAE搞成多级sid
++ 每个item加了一个unique id token：不是直接加到tokenizer里，可以理解为```[emb]```这种token，然后外挂了一个kv存储，把pretrained id emb（id/text/img各一个）拿过来，并merge
 
 ### Multi-task Supervised Fine-tuning
 
++ 通用推荐：正常的推荐
++ 受限推荐：例如约束了query/类目等
++ 探索推荐：长尾item+用户兴趣探索
++ common sense推荐：符合季节性、节假日主题的推荐
 
+要预估的有2部分
+
++ 下一个sid：用正常的ntp loss
++ 下一个item id：用special token ```q```表示，用InfoNCE
 
 ### Three-step Item Generation
 
++ beam search出K个sid，同时保留对应的beam score(多级sid的score连乘) $$\phi$$
++ 把q这个特殊token加进来再过llm得到输出，拿来去ann找出M个item
++ 然后按如下公式排序
 
+$$
+P\left(v_i \mid \mathcal{T}\right)=P\left(c_1^k, \ldots, c_{\ell}^k \mid \mathcal{T}\right) \times P\left(i d_i \mid \mathcal{T}, c_1^k, \ldots, c_{\ell}^k\right)
+$$
+
+第一项是sid的beam score，第二项如下，其中的$$\sigma$$是前k个beam score的标准差，对于有约束的任务，要求相关性高，一般标准差较大，对于要求多样性的任务，则标准差小
+
+$$
+P\left(i d_i \mid \mathcal{T}, c_1^k, \ldots, c_{\ell}^k\right)=\frac{e^{\cos \left(\boldsymbol{h}_k, \tilde{\boldsymbol{v}}_i\right) \cdot \sigma\left(\left\{\phi_1, \ldots, \phi_K\right\}\right) / \tau}}{\sum_{v_j \in \mathcal{V}_k} e^{\cos \left(\boldsymbol{h}_k, \tilde{\boldsymbol{v}}_j\right) \cdot \sigma\left(\left\{\phi_1, \ldots, \phi_K\right\}\right) / \tau}}
+$$
+
+![](../assets/sigma-scaling-deploy.png)
+
+实验的时候是加了一路近线召回
 
 ## 快手的LSVCR
 
