--- a/posts/5.llm_agentic.md
+++ b/posts/5.llm_agentic.md
@@ -1,3 +1,45 @@
+
+# agent整体综述
+
+[高效智能体的「幕后推手」是谁？一篇综述带你从记忆×工具学习×规划看透](https://mp.weixin.qq.com/s/H_6POgarpYMhR5x4wzp7Vg)
+
+[Toward Efficient Agents: Memory, Tool learning, and Planning](https://arxiv.org/abs/2601.14192)
+
+[https://github.com/yxf203/Awesome-Efficient-Agents](https://github.com/yxf203/Awesome-Efficient-Agents)
+
+![](../assets/agent-memory.png)
+
++ 记忆构建：通过概括、压缩与结构化把长对话转成**可用记忆**。
+  + 留在推理链路的工作记忆：文本式直观但吃上下文，隐式式更像缓存，可减少重复编码；
+  + 外置为可检索系统的外部记忆：先将信息压成小单元再按需召回，包括条目式、图式与分层式。
+  + 此外，要警惕过度压缩带来的信息损失，即需要考虑如何在降成本与保真之间取得平衡。
++ 记忆管理：防止存爆炸，也避免取太慢。规则式快但可能误删重要内容，大模型式更聪明但更贵，混合式则按层级或场景组合两者策略，在效果与成本之间取得折中。
++ 记忆访问：选什么+怎么用。访问分记忆选择与记忆整合，通过检索或训练等方式挑选记忆，再用压缩过滤或隐式注入减少token与重复编码。
+
+多智能体记忆：较于只靠通信，近年更多工作开始引入“记忆”这一概念来支撑规模化协作，可以概括为：
+
++ 共享记忆
++ 本地记忆
++ 混合记忆
+
+![](../assets/agent-tool.png)
+
++ 工具选择：目标是更快选对，且尽量少地塞进prompt。相关方法包括外部检索器、多标签分类，以及将工具映射为特殊token等思路，核心都是在大量工具中更快、更准地选出最需要的那几个。
++ 工具调用：核心是少等、少调、少走弯路。典型路线包括边生成边调用、并行化调用，以及利用成本感知调用与测试时高效扩展来削减冗余调用；进一步还可通过面向效率的后训练把“短轨迹、少调用”写进策略本身。
++ 工具融合推理：让模型学会“该不该用、何时用、用几次”。代表性方向包括选择性调用，引导智能体只在必要时才发起工具调用；以及成本约束策略优化，在保证效果的同时对冗余交互与过长轨迹施加惩罚，从而学到更短、更省的工具使用策略。
+
+![](../assets/agent-effecient-planning.png)
+
++ 单智能体：少算但不掉效果。主要思路包括自适应预算与控制的 “选择性思考”、结构化搜索的剪枝与代价感知、任务分解的先规划后执行；以及通过策略优化与记忆/技能获取把高效规划 “内化或复用”，越用越省。
++ 多智能体：少通信但尽可能不丢信息。方向主要有三类：拓扑稀疏化减少全连接带来的图片的消息传递开销；协议与上下文优化压缩则关注 “传什么/怎么传”；蒸馏方法通过将多智能体协作能力蒸馏回单体，来减少运行时多智能体之间协调的成本。
+
+未来：
+
++ 统一评测框架：指标口径统一，模块开销边界清楚，才能真正让各个智能体方法可比可复现。
++ 智能体的隐式推理（Latent Reasoning）：大模型侧的隐式推理正在升温，但面向智能体的研究仍相对稀缺。由于智能体链路更长、更复杂，还要处理工具调用、规划与记忆等环节，如何把中间推理 “做在隐式空间里”、在不掉效果的前提下降低成本，既是挑战，也是机会。
++ 面向部署设计：在多智能体场景下，需要把部署成本纳入考量，核心问题是投入产出比。也就是说，增加智能体带来的收益，是否足以覆盖新增的开销。
++ 多模态效率：多模态智能体发展很快，但效率研究仍相对欠缺。文本智能体的一些提效思路可以借鉴，但是直接迁移却并不容易，因为多模态智能体的感知输入、行为空间与任务结构更复杂、交互成本更高。因此，如何在多模态场景下系统地兼顾效果与成本，仍是亟待解决的关键问题。
+
 # 工具调用
 
 原理：
